# pythonica

./: LICENSE  README.md  main.py  memory.json  memory.py  pyproject.toml  tgram.py  tgram.sh
modules/settings/: settings.py
modules/tgram/: tgram.py
