[project]
name = "pythonica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.14.1",
    "langchain-ollama>=1.1.0",
    "markdown>=3.10.2",
    "pygame>=2.6.1",
    "pygments>=2.20.0",
    "python-telegram-bot>=22.7",
    "requests>=2.34.2",
]
